# obs-hyper-plugin

./: CMakeLists.txt  README.md  buildspec.json
.github/scripts/: .Aptfile  Build-Windows.ps1  build-macos.zsh  check-format.sh
.github/workflows/: main.yml
cmake/bundle/windows/: installer-Windows.iss.in
data/locale/: en-US.ini
src/: DeviceApplicationConnectionController.cpp  DeviceApplicationConnectionController.hpp  FFMpegAudioDecoder.cpp  FFMpegAudioDecoder.h  FFMpegVideoDecoder.cpp  FFMpegVideoDecoder.h  Queue.hpp  Thread.cpp  Thread.hpp  VideoDecoder.h  VideoToolboxVideoDecoder.cpp  VideoToolboxVideoDecoder.h  ffmpeg-decode.c  obs-hyper-plugin.cpp  obs-hyper-plugin.h  obs-hyper-plugin2.h  plugin-macros.h.in  plugin-main.c
